added Save and Get to mempool and UTs

--- a/Components/Mempool/MempoolService.csproj
+++ b/Components/Mempool/MempoolService.csproj
@@ -39,4 +39,8 @@
     <DeployManifest Remove="obj\Debug\netstandard2.0\Mempool.application" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Utilities\Utilities.csproj" />
+  </ItemGroup>
+
 </Project>
