--- a/Docker/DockerfilePublish
+++ b/Docker/DockerfilePublish
@@ -1,5 +1,6 @@
 # develop container
 FROM microsoft/dotnet:2.1-sdk-alpine AS develop
+RUN apk update && apk add libc6-compat
 WORKDIR /srv
 COPY . ./
 RUN dotnet build
@@ -7,10 +8,11 @@ WORKDIR /srv/Cli
 
 # publish container
 FROM microsoft/dotnet:2.1-sdk-alpine AS publish
+RUN apk update && apk add libc6-compat libnsl libnsl-dev
 WORKDIR /srv
 COPY . ./
 RUN dotnet restore
-WORKDIR /srv/Cli
+WORKDIR /srv/Node
 #RUN dotnet add package ILLink.Tasks -v 0.1.5-preview-1841731 -s https://dotnet.myget.org/F/dotnet-core/api/v3/index.json
 RUN dotnet publish -c release -o out --self-contained --runtime alpine-x64 --framework netcoreapp2.1
 
@@ -21,7 +23,13 @@ ENTRYPOINT ["dotnet", "test", "--logger:trx"]
 
 # ADL runtime
 FROM microsoft/dotnet:2.1-runtime-alpine AS runtime
-WORKDIR /srv/Cli
-COPY --from=publish /srv/Cli/out ./
+RUN apk update && apk add libc6-compat libnsl libnsl-dev
+WORKDIR /srv/Node
+COPY --from=publish /srv/Node/out ./
 RUN ls -la
-ENTRYPOINT ["./Cli"]
+RUN ldd /usr/lib/libnsl.so
+RUN cp /usr/lib/libnsl.so /usr/lib/libnsl.so.1
+RUN ldd /usr/lib/libnsl.so.1
+RUN ldd /usr/lib/libnsl.so.2
+RUN ldd libgrpc_csharp_ext.x64.so
+ENTRYPOINT ["./Node", "--public-key", "lol", "--payout-address", "kek", "--disable-dfs", "--disable-gossip", "--disable-consensus"]
