--- a/Components/Dfs/DfsService.csproj
+++ b/Components/Dfs/DfsService.csproj
@@ -9,5 +9,9 @@
     <PackageReference Include="Ipfs.Api" Version="0.23.2" />
     <PackageReference Include="Ipfs.Core" Version="0.34.2" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Utilities\Utilities.csproj" />
+  </ItemGroup>
   
 </Project>
