--- a/Docker/docker-compose.pi-net.yml
+++ b/Docker/docker-compose.pi-net.yml
@@ -20,7 +20,7 @@ services:
         constraints: [node.hostname == swarm-master]
 
   node-1:
-    image: microsoft/dotnet:2.1-runtime-alpine
+    image: adlnode.azurecr.io/pinode:latest
     networks:
       atlasVlan:
         ipv4_address: 192.168.1.29
@@ -29,7 +29,7 @@ services:
     volumes:
       - "/home/pi/.Atlas"
     ports:
-      - "4200:8000"
+      - "12142:42042"
     deploy:
       placement:
         constraints: [node.hostname == rpi-1]
@@ -44,7 +44,7 @@ services:
         constraints: [node.hostname == rpi-1]
 
   node-2:
-    image: microsoft/dotnet:2.1-runtime-alpine
+    image: adlnode.azurecr.io/pinode:latest
     networks:
       atlasVlan:
         ipv4_address: 192.168.1.31
@@ -53,7 +53,7 @@ services:
     volumes:
       - "/home/pi/.Atlas"
     ports:
-      - "4201:8000"
+      - "12242:42042"
     deploy:
       placement:
         constraints: [node.hostname == rpi-2]
@@ -68,7 +68,7 @@ services:
         constraints: [node.hostname == rpi-2]
 
   node-3:
-    image: microsoft/dotnet:2.1-runtime-alpine
+    image: adlnode.azurecr.io/pinode:latest
     networks:
       atlasVlan:
         ipv4_address: 192.168.1.33
@@ -77,7 +77,7 @@ services:
     volumes:
       - "/home/pi/.Atlas"
     ports:
-      - "4203:8000"
+      - "12342:42042"
     deploy:
       placement:
         constraints: [node.hostname == rpi-3]
@@ -92,7 +92,7 @@ services:
         constraints: [node.hostname == rpi-3]
 
   node-4:
-    image: microsoft/dotnet:2.1-runtime-alpine
+    image: adlnode.azurecr.io/pinode:latest
     networks:
       atlasVlan:
         ipv4_address: 192.168.1.35
@@ -101,7 +101,7 @@ services:
     volumes:
       - "/home/pi/.Atlas"
     ports:
-      - "4204:8000"
+      - "12442:42042"
     deploy:
       placement:
         constraints: [node.hostname == rpi-4]
@@ -116,7 +116,7 @@ services:
         constraints: [node.hostname == rpi-4]
 
   node-5:
-    image: microsoft/dotnet:2.1-runtime-alpine
+    image: adlnode.azurecr.io/pinode:latest
     networks:
       atlasVlan:
         ipv4_address: 192.168.1.37
@@ -125,7 +125,7 @@ services:
     volumes:
       - "/home/pi/.Atlas"
     ports:
-      - "4205:8000"
+      - "12542:42042"
     deploy:
       placement:
         constraints: [node.hostname == rpi-5]
@@ -140,7 +140,7 @@ services:
         constraints: [node.hostname == rpi-5]
 
   node-6:
-    image: microsoft/dotnet:2.1-runtime-alpine
+    image: adlnode.azurecr.io/pinode:latest
     networks:
       atlasVlan:
         ipv4_address: 192.168.1.39
@@ -149,7 +149,7 @@ services:
     volumes:
       - "/home/pi/.Atlas"
     ports:
-      - "4206:8000"
+      - "12642:42042"
     deploy:
       placement:
         constraints: [node.hostname == rpi-6]
