--- a/Components/Rpc/RpcService.csproj
+++ b/Components/Rpc/RpcService.csproj
@@ -8,6 +8,10 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Protocols\Rpc\Node\NodeRpcProto.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Helpers\Services\Services.csproj" />
+  </ItemGroup>
   
   <ItemGroup>
     <PackageReference Include="Grpc" Version="1.16.0" />
