--- a/Components/Dfs/DfsService.csproj
+++ b/Components/Dfs/DfsService.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Utilities\Utilities.csproj" />
+    <ProjectReference Include="..\..\Helpers\Bash\Bash.csproj" />
   </ItemGroup>
   
 </Project>
