--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -1,4 +1,4 @@
-﻿﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <IsPackable>false</IsPackable>
@@ -17,4 +17,33 @@
         <ProjectReference Include="..\Components\Dfs\DfsService.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+        <IntermediateAssembly Remove="obj\Debug\netcoreapp2.1\UnitTests.dll" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <DeployManifest Remove="obj\Debug\netcoreapp2.1\UnitTests.application" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <_DebugSymbolsIntermediatePath Remove="obj\Debug\netcoreapp2.1\UnitTests.pdb" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <_DeploymentManifestEntryPoint Remove="obj\Debug\netcoreapp2.1\UnitTests.dll" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <ApplicationManifest Remove="obj\Debug\netcoreapp2.1\Native.UnitTests.manifest" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <_UnmanagedRegistrationCache Remove="obj\UnitTests.csproj.UnmanagedRegistration.cache" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <_ResolveComReferenceCache Remove="obj\Debug\netcoreapp2.1\UnitTests.csproj.ResolveComReference.cache" />
+    </ItemGroup>
+
 </Project>
+
