--- a/Cli/Cli.csproj
+++ b/Cli/Cli.csproj
@@ -53,11 +53,11 @@
     </ItemGroup>
     
     <ItemGroup>
-        <Content Include="config.shell.json" />
+        <Content Include="config/shell.json" />
     </ItemGroup>
 
     <ItemGroup>
-        <Content Include=".\config.shell.json">
+        <Content Include=".\config\shell.json">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
             <CopyToPublishDirectory>Always</CopyToPublishDirectory>
         </Content>
