--- a/Modules/Rpc/RpcService.csproj
+++ b/Modules/Rpc/RpcService.csproj
@@ -15,5 +15,8 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Helpers\Services\Services.csproj" />
   </ItemGroup>
-  
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.1.1" />
+  </ItemGroup>
+
 </Project>
