--- a/Node/Node.csproj
+++ b/Node/Node.csproj
@@ -15,6 +15,9 @@
         <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="2.2.5" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.1.1" />
         <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="2.1.1" />
+        <PackageReference Include="Serilog" Version="2.7.1" />
+        <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
+        <PackageReference Include="Serilog.Sinks.File" Version="4.0.1-dev-00801" />
     </ItemGroup>
 
     <ItemGroup>
@@ -79,6 +82,10 @@
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
             <CopyToPublishDirectory>Always</CopyToPublishDirectory>
         </Content>
+        <Content Include="Config\components.json" />
+        <Content Include="Config\devnet.json" />
+        <Content Include="Config\mainnet.json" />
+        <Content Include="Config\testnet.json" />
     </ItemGroup>
 
     <PropertyGroup Condition="'$(Configuration)'=='Release'">
