--- a/Protocols/Rpc/Node/NodeRpcProto.csproj
+++ b/Protocols/Rpc/Node/NodeRpcProto.csproj
@@ -6,6 +6,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Grpc" Version="1.16.0" />
+        <PackageReference Include="Grpc.Core" Version="1.16.0" />
         <PackageReference Include="Google.Protobuf" Version="3.6.1" />
     </ItemGroup>
 
