--- a/Components/Redis/Redis.csproj
+++ b/Components/Redis/Redis.csproj
@@ -7,7 +7,10 @@
 
     <ItemGroup>
         <PackageReference Include="Google.Protobuf" Version="3.6.1" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.0.0-preview.18572.1" />
         <PackageReference Include="StackExchange.Redis" Version="2.0.513" />
+        <PackageReference Include="StackExchange.Redis.Extensions.Core" Version="4.0.5" />
+        <PackageReference Include="StackExchange.Redis.Extensions.Newtonsoft" Version="4.0.5" />
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="MSTest.TestAdapter" Version="1.3.2" />
