--- a/Node/Node.csproj
+++ b/Node/Node.csproj
@@ -12,18 +12,19 @@
         <PackageReference Include="Akka.Remote" Version="1.3.10" />
         <PackageReference Include="Akka.DI.AutoFac" Version="1.3.9" />
         <PackageReference Include="Autofac.Configuration" Version="4.1.0" />
+        <PackageReference Include="BouncyCastle" Version="1.8.4" />
         <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="2.2.5" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.1.1" />
         <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="2.1.1" />
         <PackageReference Include="Serilog" Version="2.7.1" />
         <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
         <PackageReference Include="Serilog.Sinks.File" Version="4.0.1-dev-00801" />
-        <PackageReference Include="WatsonTcp" Version="1.1.6" />
     </ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\Protocols\Rpc\Node\NodeRpcProto.csproj" />
         <ProjectReference Include="..\Protocols\Mempool\MempoolProto.csproj" />
+        <ProjectReference Include="..\Protocols\Peer\PeerProto.csproj" />
     </ItemGroup>
     
     <ItemGroup>
