--- a/Node/Node.csproj
+++ b/Node/Node.csproj
@@ -28,6 +28,7 @@
     </ItemGroup>
     
     <ItemGroup>
+        <ProjectReference Include="..\Helpers\RLP\RLP.csproj" />
         <ProjectReference Include="..\Helpers\Network\Network.csproj" />
         <ProjectReference Include="..\Helpers\Platform\Platform.csproj" />
         <ProjectReference Include="..\Helpers\DataStore\DataStore.csproj" />
