make sure log folder is not part of ignore rule

--- a/Node/Node.csproj
+++ b/Node/Node.csproj
@@ -59,6 +59,7 @@
 
     <ItemGroup>
       <Folder Include="Core\Helpers" />
+      <Folder Include="Core\Modules\Peer\Messages\Handlers" />
     </ItemGroup>
     
     <PropertyGroup Condition="'$(Configuration)'=='Release'">
