--- a/Components/KeyStore/KeyStore.csproj
+++ b/Components/KeyStore/KeyStore.csproj
@@ -18,6 +18,10 @@
       <PackageReference Include="BouncyCastle.NetCore" Version="1.8.3" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Properties" />
+    </ItemGroup>
+
     <PropertyGroup>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
