--- a/Helpers/Network/Network.csproj
+++ b/Helpers/Network/Network.csproj
@@ -6,8 +6,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="UnitTests" />
+        <ProjectReference Include="..\Logger\Logger.csproj" />
     </ItemGroup>
+
     <ItemGroup>
         <PackageReference Include="MSTest.TestAdapter" Version="1.3.2" />
         <PackageReference Include="MSTest.TestFramework" Version="1.3.2" />
