--- a/Node/Node.csproj
+++ b/Node/Node.csproj
@@ -4,6 +4,7 @@
         <OutputType>Exe</OutputType>
         <RootNamespace>ADL.Node</RootNamespace>
         <TargetFramework>netcoreapp2.1</TargetFramework>
+        <Version>0.1.1</Version>
     </PropertyGroup>
 
     <ItemGroup>
