--- a/Components/HDWallet/HDWallet.csproj
+++ b/Components/HDWallet/HDWallet.csproj
@@ -2,6 +2,9 @@
     <PropertyGroup>
         <TargetFramework>netcoreapp2.1</TargetFramework>
         <RootNamespace>ADL.HDWallet</RootNamespace>
+        <SelfContained>false</SelfContained>
+        <PlatformTarget>AnyCPU</PlatformTarget>
+        <RuntimeIdentifier>linux-x64</RuntimeIdentifier>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="NBitcoin" Version="4.1.1.10" />
