--- a/Components/Ipfs/Ipfs.csproj
+++ b/Components/Ipfs/Ipfs.csproj
@@ -3,12 +3,10 @@
     <PropertyGroup>
         <TargetFramework>netcoreapp2.1</TargetFramework>
         <RootNamespace>ADL.Ipfs</RootNamespace>
+        <SelfContained>false</SelfContained>
+        <PlatformTarget>AnyCPU</PlatformTarget>
+        <RuntimeIdentifier>linux-x64</RuntimeIdentifier>
     </PropertyGroup>
-    <ItemGroup>
-        <PackageReference Include="MSTest.TestAdapter" Version="1.3.2" />
-        <PackageReference Include="MSTest.TestFramework" Version="1.3.2" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
-    </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="Ipfs.Api" Version="0.23.2" />
@@ -17,10 +15,6 @@
 
     <ItemGroup>
         <ProjectReference Include="..\..\Helpers\Bash\Bash.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Compile Remove="UnitTests\UT_DFS.cs" />
     </ItemGroup>
 
 </Project>
