--- a/Components/KeySigner/KeySigner.csproj
+++ b/Components/KeySigner/KeySigner.csproj
@@ -3,6 +3,9 @@
     <PropertyGroup>
         <TargetFramework>netcoreapp2.1</TargetFramework>
         <RootNamespace>ADL.KeySigner</RootNamespace>
+        <SelfContained>false</SelfContained>
+        <PlatformTarget>AnyCPU</PlatformTarget>
+        <RuntimeIdentifier>linux-x64</RuntimeIdentifier>
     </PropertyGroup>
     <ItemGroup>
         <ProjectReference Include="..\..\Helpers\Hex\Hex.csproj" />
