--- a/Components/Redis/Redis.csproj
+++ b/Components/Redis/Redis.csproj
@@ -3,6 +3,9 @@
     <PropertyGroup>
         <TargetFramework>netcoreapp2.1</TargetFramework>
         <RootNamespace>ADL.Redis</RootNamespace>
+        <SelfContained>false</SelfContained>
+        <PlatformTarget>AnyCPU</PlatformTarget>
+        <RuntimeIdentifier>linux-x64</RuntimeIdentifier>
     </PropertyGroup>
 
     <ItemGroup>
@@ -11,11 +14,6 @@
         <PackageReference Include="StackExchange.Redis" Version="2.0.513" />
         <PackageReference Include="StackExchange.Redis.Extensions.Core" Version="4.0.5" />
         <PackageReference Include="StackExchange.Redis.Extensions.Newtonsoft" Version="4.0.5" />
-    </ItemGroup>
-    <ItemGroup>
-        <PackageReference Include="MSTest.TestAdapter" Version="1.3.2" />
-        <PackageReference Include="MSTest.TestFramework" Version="1.3.2" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
     </ItemGroup>
 
     <ItemGroup>
