--- a/Helpers/Hex/Hex.csproj
+++ b/Helpers/Hex/Hex.csproj
@@ -2,6 +2,9 @@
 <PropertyGroup>
   <TargetFramework>netcoreapp2.1</TargetFramework>
   <RootNamespace>ADL.Hex</RootNamespace>
+  <SelfContained>false</SelfContained>
+  <PlatformTarget>AnyCPU</PlatformTarget>
+  <RuntimeIdentifier>linux-x64</RuntimeIdentifier>
 </PropertyGroup>
 
   <ItemGroup>
