--- a/Node/Node.csproj
+++ b/Node/Node.csproj
@@ -13,7 +13,7 @@
         <PackageReference Include="Akka.Remote" Version="1.3.10" />
         <PackageReference Include="Akka.DI.AutoFac" Version="1.3.9" />
         <PackageReference Include="Autofac.Configuration" Version="4.1.0" />
-        <PackageReference Include="BouncyCastle" Version="1.8.4" />
+        <PackageReference Include="BouncyCastle.NetCore" Version="1.8.3" />
         <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="2.2.5" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.1.1" />
         <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="2.1.1" />
