--- a/Node/config.devnet.json
+++ b/Node/config.devnet.json
@@ -8,8 +8,8 @@
       }
     },
     "Ssl": {
-      "PfxFileName": "PeerCert.pfx",
-      "SslCertPassword": "WeNeedASaf3rPassword"
+      "PfxFileName": "mycert.pfx",
+      "SslCertPassword": "test"
     },
     "Services" : {
       "Consensus": {
