--- a/Protocols/Rpc/Wallet/WalletRpcProto.csproj
+++ b/Protocols/Rpc/Wallet/WalletRpcProto.csproj
@@ -2,6 +2,10 @@
 
     <PropertyGroup>
         <TargetFramework>netcoreapp2.1</TargetFramework>
+        <RootNamespace>ADL.Protocol.Rpc.Wallet</RootNamespace>
+        <SelfContained>false</SelfContained>
+        <PlatformTarget>AnyCPU</PlatformTarget>
+        <RuntimeIdentifier>linux-x64</RuntimeIdentifier>
     </PropertyGroup>
 
     <ItemGroup>
@@ -18,34 +22,6 @@
 
     <ItemGroup Condition="'@(Server)' == ''">
         <Generated Include=".\Service\Rpc.cs" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <_UnmanagedRegistrationCache Remove="obj\RpcProto.csproj.UnmanagedRegistration.cache" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <_ResolveComReferenceCache Remove="obj\Debug\netcoreapp2.1\RpcProto.csproj.ResolveComReference.cache" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <IntermediateAssembly Remove="obj\Debug\netcoreapp2.1\RpcProto.dll" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <_DebugSymbolsIntermediatePath Remove="obj\Debug\netcoreapp2.1\RpcProto.pdb" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <_DeploymentManifestEntryPoint Remove="obj\Debug\netcoreapp2.1\RpcProto.dll" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <ApplicationManifest Remove="obj\Debug\netcoreapp2.1\Native.RpcProto.manifest" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <DeployManifest Remove="obj\Debug\netcoreapp2.1\RpcProto.application" />
     </ItemGroup>
 
     <!-- Generate the code from all of the proto files -->
