sync dockerfile to office machine

--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -1,31 +1,22 @@
-# develop container
-FROM microsoft/dotnet:2.1-sdk AS develop
-#RUN apk update && apk add libc6-compat
-WORKDIR /srv
-COPY . ./
-RUN dotnet build
-WORKDIR /srv/Cli
-
-# publish container
 FROM microsoft/dotnet:2.1-sdk AS publish
 #RUN apk update && apk add libc6-compat libnsl libnsl-dev
 WORKDIR /srv
-COPY . ./
+COPY ../src ./
 RUN dotnet restore
-WORKDIR /srv/Node
+WORKDIR /srv/Catalyst.Node
 #RUN dotnet add package ILLink.Tasks -v 0.1.5-preview-1841731 -s https://dotnet.myget.org/F/dotnet-core/api/v3/index.json
 RUN dotnet publish -c release -o out --self-contained --runtime linux-x64 --framework netcoreapp2.1
 
 # test application
 FROM publish AS testrunner
-WORKDIR /srv
+WORKDIR /srv/Catalyst.Node
 ENTRYPOINT ["dotnet", "test", "--logger:trx"]
 
 # ADL runtime
 FROM microsoft/dotnet:2.1-runtime AS runtime
 #RUN apk update && apk add libc6-compat libnsl libnsl-dev
-WORKDIR /srv/Node
-COPY --from=publish /srv/Node/out ./
+WORKDIR /srv/Catalyst.Node
+COPY --from=publish /srv/Catalyst.Node/out ./
 
 COPY certificate.pem ./
 COPY mycert.pfx ./
