--- a/src/Catalyst.Helpers.Network/UnitTests/Catalyst.Helpers.Network.UnitTests.csproj
+++ b/src/Catalyst.Helpers.Network/UnitTests/Catalyst.Helpers.Network.UnitTests.csproj
@@ -15,4 +15,7 @@
         <PackageReference Include="MSTest.TestFramework" Version="1.3.2" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
     </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\Catalyst.Helpers.Network.csproj" />
+    </ItemGroup>
 </Project>
