query all seed nodes and build a list of dnsQueryResponse objects

--- a/src/Catalyst.Helpers.Network/Catalyst.Helpers.Network.csproj
+++ b/src/Catalyst.Helpers.Network/Catalyst.Helpers.Network.csproj
@@ -41,6 +41,9 @@
     <ItemGroup>
         <None Remove="UnitTests\**" />
     </ItemGroup>
+    <ItemGroup>
+      <PackageReference Include="DnsClient" Version="1.2.0" />
+    </ItemGroup>
     <PropertyGroup>
         <DefaultItemExcludes>./UnitTests</DefaultItemExcludes>
     </PropertyGroup>
